add the ability to turn on and off the debugging mode which prints records